--- a/memdesk_testng/pom.xml
+++ b/memdesk_testng/pom.xml
@@ -27,6 +27,11 @@
         <version>3.141.59</version>
     </dependency>  
 
+<dependency>
+<groupId>commons-io</groupId>
+<artifactId>commons-io</artifactId>
+<version>2.6</version>
+</dependency>
 	<dependency>
 		<groupId>log4j</groupId>
 		<artifactId>log4j</artifactId>
